--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -233,7 +233,7 @@
 						</div>
 
 						<div class="menu-dropdown" style="width: fit-content;">
-							<button class="boton-pequeño" style="display: flex; align-items: center; gap: 10px; justify-content: center; padding: 10px 25px; margin: 0; border: 0px; color: var(--colorTextoVisitado);">
+							<button class="boton-pequeño" style="display: flex; align-items: center; gap: 10px; justify-content: center; padding: 10px 20px; margin: 0; border: 0px; color: var(--colorTextoVisitado);">
 								<div style="color: var(--colorEnlace); margin-right: 5px;">
 									@if (tipo == "0")
 									{
@@ -271,8 +271,10 @@
 									}
 								</div>
 
-								<div>
-									<i class="fa-solid fa-caret-down"></i>
+								<div style="max-width: 16px; max-height: 16px;">
+									<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+										<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+									</svg>
 								</div>
 							</button>
 
