--- a/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
@@ -61,7 +61,12 @@
 				@if (usuario?.PatreonCoins >= 30)
 				{
 					<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px, 40px; display: flex; align-items: center; gap: 20px;">
-						<i style="font-size: 25px;" class="fa-solid fa-circle-exclamation"></i>
+						<div style="max-width: 26px;">
+							<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+								<path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24l0 112c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-112c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
+							</svg>
+						</div>
+
 						@Herramientas.Idiomas.BuscarTexto(idioma, "Limit", "PatreonStore")
 					</div>
 				}
