--- a/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
@@ -62,7 +62,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@deck</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -79,7 +83,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@tipo</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -96,7 +104,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@sistema</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -113,7 +125,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@etiqueta</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -130,7 +146,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@categoria</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -147,7 +167,11 @@ else
 							<button @onclick="(e => CambiarIDs(e, cadena, letra))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px; background-color: var(--fondoBotonPequeño);">
 								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 100%;">
 									<div style="font-size: 14px;">@generos</div>
-									<i class="fa-solid fa-xmark"></i>
+									<div style="max-width: 14px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+											<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+										</svg>
+									</div>
 								</div>
 							</button>
 						}
@@ -173,11 +197,19 @@ else
 							<div>
 								@if (enseñarDeck == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
@@ -228,13 +260,21 @@ else
 							</div>
 
 							<div>
-								@if (enseñarSistemas == true)
+								@if (enseñarTipos == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
@@ -287,11 +327,19 @@ else
 							<div>
 								@if (enseñarSistemas == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
@@ -344,11 +392,19 @@ else
 							<div>
 								@if (enseñarEtiquetas == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
@@ -401,11 +457,19 @@ else
 							<div>
 								@if (enseñarCategorias == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
@@ -468,11 +532,19 @@ else
 							<div>
 								@if (enseñarGeneros == true)
 								{
-									<i class="fa-solid fa-chevron-up"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
+										</svg>
+									</div>
 								}
 								else
 								{
-									<i class="fa-solid fa-chevron-down"></i>
+									<div style="max-width: 16px;">
+										<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+											<path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+										</svg>
+									</div>
 								}
 							</div>
 						</div>
