--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Patreon.razor
@@ -12,7 +12,11 @@
     {
         <div style="background-color: var(--fondoBien); border: 1px solid var(--fondoBotonPequeño); padding: 20px 25px; display: flex; flex-direction: column; gap: 30px;">
             <div style="display: flex; align-items: center; gap: 25px;">
-                <i class="fa-solid fa-check" style="font-size: 25px;"></i>
+                <div style="max-width: 26px;">
+                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                    </svg>
+                </div>
 
                 <div style="display: flex; flex-direction: column; gap: 10px;">
                     <label style="text-align: left; width: 100%;">@Herramientas.Idiomas.BuscarTexto(idioma, "Patreon1", "Account")</label>
@@ -29,7 +33,11 @@
         <div style="display: flex; flex-direction: column; gap: 30px;">
             <div style="background-color: var(--fondoAlerta); border: 1px solid var(--fondoBotonPequeño); padding: 20px 25px; display: flex; flex-direction: column; gap: 30px;">
                 <div style="display: flex; align-items: center; gap: 25px;">
-                    <i class="fa-solid fa-exclamation" style="font-size: 25px;"></i>
+                    <div style="max-width: 26px;">
+                        <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24l0 112c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-112c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
+                        </svg>
+                    </div>
 
                     <div style="display: flex; flex-direction: column; gap: 10px;">
                         <label style="text-align: left; width: 100%;">@Herramientas.Idiomas.BuscarTexto(idioma, "Patreon2", "Account")</label>
@@ -55,7 +63,11 @@
             
             <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
                 <div style="display: flex; align-items: center; gap: 25px;">
-                    <i class="fa-solid fa-info-circle" style="font-size: 25px;"></i>
+                    <div style="max-width: 26px;">
+                        <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+                        </svg>
+                    </div>
 
                     <label style="text-align: left; width: 100%;">@Herramientas.Idiomas.BuscarTexto(idioma, "Patreon7", "Account")</label>
                 </div>
